--- a/src/index.css
+++ b/src/index.css
@@ -15,35 +15,30 @@ code {
     margin: auto;
 }
 
-.contenerBut {
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+}
+
+.contenerIcon {
     display: flex;
-}
-
-button {
-    background-color: white;
-    color: rgb(78, 77, 77);
-    padding: 3px;
-    margin-right: 3px;
-    text-transform: capitalize;
-    border-color: rgb(78, 77, 77);
-    margin-top: 20px;
-}
-
-button:active {
-    background-color: rgb(78, 77, 77);
-    color: white;
-}
-
-.contenerImage {
-    width: 920px;
-    margin-top: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-img {
-    width: 300px;
-    height: auto;
-    margin-bottom: 10px;
+    justify-content: flex-end;
 }
