--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,81 @@ code {
     -moz-osx-font-smoothing: grayscale;
     /* Support for IE. */
     font-feature-settings: 'liga';
+    padding-bottom: 15px;
+    padding-right: 100px;
 }
 
 .contenerIcon {
     display: flex;
     justify-content: flex-end;
+}
+
+.contenerCart {
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    box-sizing: border-box;
+    width: 250px;
+    padding: 8px 15px;
+    /*border: 2px solid #dfdee8;*/
+    background-color: #f4f4f4;
+}
+
+h3 {
+    text-transform: uppercase;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+p {
+    text-align: center;
+    margin: 2px;
+}
+
+.card:nth-child(n+4) {
+    margin-top: 30px;
+}
+
+.card:nth-child(3n+2) {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+img {
+    width: 95%;
+}
+
+footer {
+    height: 45px;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 10px;
+    align-items: center;
+    color: red;
+}
+
+button {
+    color: red;
+    border-radius: 15px;
+    padding: 5px 10px;
+    border-color: red;
+}
+
+.articleProduct {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 950px;
+    height: 80px;
+    margin-top: 25px;
+    background-color: #f4f4f4;
+}
+
+.img {
+    height: 80px;
 }
